# E-Mail-spam-detector

./: .gitignore  README.md  pyproject.toml
.streamlit_tmp/: uploaded_emails.csv  uploaded_emails_1.csv  uploaded_emails_noisy_200.csv
src/: streamlit_app.py
src/spam_detector/: cli.py  config.py  data.py  evaluate.py  models.py  plots.py  predict.py  train.py
tests/: test_data.py  test_default_paths.py  test_evaluate.py  test_evaluate_from_files.py  test_models.py  test_plots.py  test_predict.py  test_save_reports_combined.py  test_split_train_val_test.py  test_train_multimodel.py
