[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email_spam_detector"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "numpy>=1.24",
    "joblib>=1.3",
    "matplotlib>=3.8",
    "streamlit>=1.30"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "mypy>=1.7",
    "pylint>=3.0",
    "types-joblib",
    "pandas-stubs",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
spamdet-train = "spam_detector.cli:train_main"
spamdet-predict = "spam_detector.cli:predict_main"